# SkeletalAnimation

./: CMakeLists.txt  LICENSE  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/aj/: aj.dae  breathing_idle.dae  jump.dae  left_strafe_walking.dae  right_strafe_walking.dae  walking.dae  walking_backwards.dae
src/: animation.hpp  animator.hpp  bone.hpp  helper.hpp  interpolation.hpp  main.cpp  mesh.hpp  model.hpp  scene.hpp  shader.hpp  vaoutils.hpp
src/shaders/: default.frag  default.vert  depth.frag  depth.vert
